HW9/E-2.3.21-HamDistance/wdir_msg/compile.err

HamDistance.java:29: error: incompatible types: missing return value
            return;
            ^
HamDistance.java:43: error: incompatible types: String cannot be converted to int
            seq[i]=args[i];
                       ^
HamDistance.java:45: error: incompatible types: String cannot be converted to int
        choose(seq,flipping,args[0],0);
                                ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors


